@@ -1,2 +1,0 @@
-function a = mag(u,v)
-a = sqrt(u.*u+v.*v);
