@@ -1,3 +1,0 @@
-function a = pmp(t,z)
-
-a = t + 9.81 * 910 * 9.8e-8 * z;
