@@ -1,3 +1,0 @@
-function [data] = tpread(id,ewn,nsn);
-skip = 4 * (2 + ewn * nsn);
-fseek(id,skip,0);
